// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App:  matches snapshot when on App 1`] = `
<Fragment>
  <Main>
    <ComponentStub />
    <TabBar />
  </Main>
</Fragment>
`;

exports[`App:  matches snapshot when on landing page 1`] = `
<Fragment>
  <main>
    <ComponentStub />
  </main>
</Fragment>
`;
